mostly responsive at this point

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,9 @@
 <div class="navbar-fixed">
   <nav>
     <div class="nav-wrapper white z-depth-3">
-      <a id="logo" href="/" class="brand-logo blue-grey-text text-darken-1-text flow-text">Bill Gardner  |  <small>Backend Developer</small></a>
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <a id="logo" href="/" class="brand-logo blue-grey-text text-darken-1-text flow-text hide-on-med-and-down">Bill Gardner  |  <small>Backend Developer</small></a>
+      <a id="logo" href="/" class="brand-logo blue-grey-text text-darken-1-text flow-text center-align hide-on-large-only">Bill Gardner  |  <small>Backend Developer</small></a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons blue-grey darken-1">menu</i></a>
         <ul id="buttons" class="right hide-on-med-and-down">
           <li><a id="btn" class="waves-effect blue-grey darken-1 btn z-depth-2 hide-on-med-and-down" href="#about">About</a></li>
           <li><a id="btn" class="waves-effect blue-grey darken-1 btn z-depth-2 hide-on-med-and-down" href="#portfolio">Portfolio</a></li>
