MVP Question Mark

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,9 +39,9 @@
           </div>
 
           <div class="card-action">
-            <a id="portfoliobutton" class="waves-effect waves-light btn modal-trigger" href="#modal1">More Information</a>
-            <a id="portfoliobutton" class="waves-effect waves-light btn modal-trigger" href="https://github.com/williamjohngardner/bill_of_materials" target="blank">GitHub Repository</a>
-            <a id="portfoliobutton" class="waves-effect waves-light btn modal-trigger z-depth-2" href="http://www.subasmbly.com" target="blank">Open Subasmbly.com</a>
+            <a id="portfoliobutton" class="waves-effect grey darken-3 btn modal-trigger" href="#modal1">More Information</a>
+            <a id="portfoliobutton" class="waves-effect grey darken-3 btn modal-trigger" href="https://github.com/williamjohngardner/bill_of_materials" target="blank">GitHub Repository</a>
+            <a id="portfoliobutton" class="waves-effect grey darken-3 btn modal-trigger z-depth-2" href="http://www.subasmbly.com" target="blank">Open Subasmbly.com</a>
           </div>
         </div>
       </div>
@@ -54,9 +54,9 @@
             <img class="materialboxed" src="{% static 'app/images/billslist.jpg' %}" alt="" />
           </div>
           <div class="card-action">
-            <a id="portfoliobutton" class="waves-effect waves-light btn modal-trigger" href="#modal2">More Information</a>
-            <a id="portfoliobutton" class="waves-effect waves-light btn modal-trigger" href="https://github.com/williamjohngardner/billslist" target="blank">GitHub Repository</a>
-            <a id="portfoliobutton" class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://billslist.herokuapp.com/" target="blank">Open Bill's List</a>
+            <a id="portfoliobutton" class="waves-effect grey darken-3 btn modal-trigger" href="#modal2">More Information</a>
+            <a id="portfoliobutton" class="waves-effect grey darken-3 btn modal-trigger" href="https://github.com/williamjohngardner/billslist" target="blank">GitHub Repository</a>
+            <a id="portfoliobutton" class="waves-effect grey darken-3 btn modal-trigger z-depth-2" href="https://billslist.herokuapp.com/" target="blank">Open Bill's List</a>
           </div>
         </div>
       </div>
@@ -69,9 +69,9 @@
             <img class="materialboxed" src="{% static 'app/images/billy.jpg' %}" alt="" />
           </div>
           <div class="card-action">
-            <a id="portfoliobutton" class="waves-effect waves-light btn modal-trigger" href="#modal3">More Information</a>
-            <a id="portfoliobutton" class="waves-effect waves-light btn modal-trigger" href="https://github.com/williamjohngardner/url_shortener" target="blank">GitHub Repository</a>
-            <a id="portfoliobutton" class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://billdotly.herokuapp.com/" target="blank">Open bil.ly</a>
+            <a id="portfoliobutton" class="waves-effect grey darken-3 btn modal-trigger" href="#modal3">More Information</a>
+            <a id="portfoliobutton" class="waves-effect grey darken-3 btn modal-trigger" href="https://github.com/williamjohngardner/url_shortener" target="blank">GitHub Repository</a>
+            <a id="portfoliobutton" class="waves-effect grey darken-3 btn modal-trigger z-depth-2" href="https://billdotly.herokuapp.com/" target="blank">Open bil.ly</a>
           </div>
         </div>
       </div>
@@ -428,16 +428,16 @@
   </ul>
   <div class="row hide-on-med-and-down">
     <div class="col l6">
-      <a id="resumebtn" class="waves-effect waves-light btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" target="blank">Click to View My Resume</a>
+        <a id="resumebtn" class="waves-effect grey darken-3 btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" target="blank">Click to View My Resume</a>
     </div>
     <div class="col l6 right-align">
-      <a id="resumebtn" class="waves-effect waves-light btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" download>Click to Download My Resume in .pdf Formatting</a>
+      <a id="resumebtn" class="waves-effect grey darken-3 btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" download>Click to Download My Resume in .pdf Formatting</a>
     </div>
   </div>
   <div class="row hide-on-large-only">
     <div class="col s12 m12 center-align">
-      <a id="resumebtn" class="waves-effect waves-light btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" target="blank">Click to View My Resume</a>
-      <a id="resumebtn" class="waves-effect waves-light btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" download>Click to Download My Resume in .pdf Formatting</a>
+      <a id="resumebtn" class="waves-effect grey darken-3 btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" target="blank">Click to View My Resume</a>
+      <a id="resumebtn" class="waves-effect grey darken-3 btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" download>Click to Download My Resume in .pdf Formatting</a>
     </div>
   </div>
     <br>
