Messed with Nav Buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,14 +20,14 @@
       <a id="logo" href="/" class="brand-logo blue-grey-text text-darken-1-text flow-text hide-on-small-only">Bill Gardner  |  <small>Backend Developer</small></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons blue-grey darken-1">menu</i></a>
         <ul id="buttons" class="right hide-on-med-and-down">
-          <li><a id="btn" class="waves-effect grey darken-3 btn z-depth-2" href="#about">About</a></li>
+          <li><a id="btn" class="waves-effect grey darken-3 btn z-depth-2" href="#about">Home</a></li>
           <li><a id="btn" class="waves-effect grey darken-3 btn z-depth-2" href="#portfolio">Portfolio</a></li>
           <li><a id="btn" class="waves-effect grey darken-3 btn z-depth-2" href="#tools">Skills</a></li>
           <li><a id="btn" class="waves-effect grey darken-3 btn z-depth-2" href="#resume">Resume</a></li>
           <li><a id="btn" class="waves-effect grey darken-3 btn z-depth-2" href="#contact">Contact</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
-          <li><a class="waves-effect grey darken-3 btn" href="#about">About</a></li>
+          <li><a class="waves-effect grey darken-3 btn" href="#about">Home</a></li>
           <li><a class="waves-effect grey darken-3 btn" href="#portfolio">Portfolio</a></li>
           <li><a class="waves-effect grey darken-3 btn" href="#tools">Skills</a></li>
           <li><a class="waves-effect grey darken-3 btn" href="#resume">Resume</a></li>
