--- a/templates/index.html
+++ b/templates/index.html
@@ -227,17 +227,23 @@
       <br>
       <br>
       <div class="row">
-        <div class="col l3">
+        <div class="col l2">
           <img src="{% static 'app/images/python.png' %}" alt="Python Logo" />
         </div>
-        <div class="col l3">
+        <div class="col l2">
           <img src="{% static 'app/images/django.png' %}" alt="Django Logo" />
         </div>
-        <div class="col l3 right-align">
+        <div class="col l2">
+          <img src="{% static 'app/images/wordpress.png' %}" alt="Wordpress Logo" />
+        </div>
+        <div class="col l2">
           <img src="{% static 'app/images/rest.png' %}" alt="Restful Logo" />
         </div>
-        <div class="col l3 right-align">
-          <img src="{% static 'app/images/htmlcss.png' %}" alt="HTML5 CSS3 Logo" />
+        <div class="col l2">
+          <img src="{% static 'app/images/html.png' %}" alt="HTML5 Logo" />
+        </div>
+        <div class="col l2 right-align">
+          <img src="{% static 'app/images/css.png' %}" alt="CSS3 Logo" />
         </div>
       </div>
       <div class="row">
@@ -287,10 +293,16 @@
           <img src="{% static 'app/images/django.png' %}" alt="Django Logo" />
         </div>
         <div class="col s12 m12 center-align">
+          <img src="{% static 'app/images/wordpress.png' %}" alt="Wordpress Logo" />
+        </div>
+        <div class="col s12 m12 center-align">
           <img src="{% static 'app/images/rest.png' %}" alt="Restful Logo" />
         </div>
         <div class="col s12 m12 center-align">
-          <img src="{% static 'app/images/htmlcss.png' %}" alt="HTML5 CSS3 Logo" />
+          <img src="{% static 'app/images/html.png' %}" alt="HTML5 Logo" />
+        </div>
+        <div class="col s12 m12 center-align">
+          <img src="{% static 'app/images/css.png' %}" alt="CSS3 Logo" />
         </div>
       </div>
       <div class="row">
@@ -356,14 +368,14 @@
               <h6 class="btn-flat disabled black-text" width="175px">Rhino3D</h6>
             </div>
             <div class="col m3">
-              <h6 class="btn-flat disabled black-text" width="175px">HTML5</h6>
+              <h6 class="btn-flat disabled black-text" width="175px">HTML5/CSS3</h6>
               <h6 class="btn-flat disabled black-text" width="175px">Github</h6>
               <h6 class="btn-flat disabled black-text" width="175px">ZSH</h6>
               <h6 class="btn-flat disabled black-text" width="175px">In-Design</h6>
               <h6 class="btn-flat disabled black-text" width="175px">AutoCAD</h6>
             </div>
             <div class="col m3">
-              <h6 class="btn-flat disabled black-text" width="175px">CSS3</h6>
+              <h6 class="btn-flat disabled black-text" width="175px">Wordpress</h6>
               <h6 class="btn-flat disabled black-text" width="175px">RESTful API</h6>
               <h6 class="btn-flat disabled black-text" width="175px">PostgreSQL</h6>
               <h6 class="btn-flat disabled black-text" width="175px">Acrobat</h6>
@@ -464,7 +476,7 @@
     <br>
     <div class="card horizontal blue-grey darken-1 z-depth-4">
       <div class="card-image">
-        <img src="{% static 'app/images/headshot.jpg' %}" alt="Bill Gardner Headshot" />
+        <img src="{% static 'app/images/headshot.jpg' %}" width="290px" height="366px" alt="Bill Gardner Headshot" />
       </div>
       <div class="card-stacked">
         <div class="card-content">
@@ -481,8 +493,8 @@
             </div>
             <div class="col s12 m12 l4">
               <p class="white-text">I Do Things:</p>
-              <p class="white-text"><small>My favorite things include witty banter, playing a bass guitar with friends (either electric, acoustic, or my cigar box bass),
-              traveling, being exposed to new cultures/information/points of view, and being a little bit of a beer snob.</small></p>
+              <p class="white-text"><small>My favorite things include witty banter, playing my bass guitar with friends (either electric, acoustic, or my cigar box bass),
+              traveling, and being a little bit of a beer snob.</small></p>
             </div>
           </div>
         </div>
